--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,133 @@
-node_modules
-dist
-.DS_Store
-server/public
-vite.config.ts.*
-*.tar.gz
+# Dependencies
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# Vector database files (too large for GitHub)
+# Build outputs
+dist/
+build/
+*.tsbuildinfo
+
+# Environment files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Database files
+local.db
+*.db
+*.sqlite
+*.sqlite3
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Logs
+logs
+*.log
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory used by tools like istanbul
+coverage/
+*.lcov
+
+# nyc test coverage
+.nyc_output
+
+# Dependency directories
+jspm_packages/
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Microbundle cache
+.rpt2_cache/
+.rts2_cache_cjs/
+.rts2_cache_es/
+.rts2_cache_umd/
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# parcel-bundler cache (https://parceljs.org/)
+.cache
+.parcel-cache
+
+# Next.js build output
+.next
+
+# Nuxt.js build / generate output
+.nuxt
+
+# Gatsby files
+.cache/
+public
+
+# Storybook build outputs
+.out
+.storybook-out
+
+# Temporary folders
+tmp/
+temp/
+
+# Large data files (too big for GitHub)
 data/embeddings.json
 data/embeddings_metadata.json
 data/preprocessing_metadata.json
+data/keywords_data.csv
+data/keywords_all.csv
+data/keywords_long_tail.csv
+data/embeddings_chunks/
+data/embeddings_chunks/*.bin
+
+# Large attached assets
 attached_assets/*.pkl
 attached_assets/*.npy
+attached_assets/*.bin
 attached_assets/metadata_*.json
 attached_assets/embeddings_*.npy
 attached_assets/vector_database_*.pkl
+attached_assets/keywords_*.csv
+
+# Server public files
+server/public
+
+# Vite config backups
+vite.config.ts.*
+
+# Archive files
+*.tar.gz
+*.zip
+*.rar
+*.7z
