--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc",
-    "db:push": "drizzle-kit push"
+    "db:push": "drizzle-kit push",
+    "audit:metrics": "npx clinic doctor -- node --import tsx scripts/audit-compute-metrics.ts",
+    "audit:metrics:bubbleprof": "npx clinic bubbleprof -- node --import tsx scripts/audit-compute-metrics.ts",
+    "audit:metrics:flame": "npx clinic flame -- node --import tsx scripts/audit-compute-metrics.ts",
+    "list:projects": "tsx scripts/list-projects.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -105,6 +109,7 @@
     "@types/ws": "^8.5.13",
     "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.4.20",
+    "clinic": "^13.0.0",
     "drizzle-kit": "^0.31.4",
     "esbuild": "^0.25.0",
     "postcss": "^8.4.47",
