UPDATE: enhance .env.example with comprehensive environment variable configurations for Supabase, Stripe, OpenAI, DataForSEO, and PostHog. Add .env.prod to .gitignore and improve keyword loading logic in KeywordVectorService to support local storage and Supabase integration, ensuring efficient keyword management and data persistence.

--- a/.env.example
+++ b/.env.example
@@ -1,42 +1,175 @@
+# =============================================================================
+# ENVIRONMENT CONFIGURATION
+# =============================================================================
+# Copy this file to .env and fill in your values
+# Never commit .env to version control!
 
-SUPABASE_URL=
-SUPABASE_ANON_KEY=
-SUPABASE_SERVICE_ROLE_KEY=
-DATABASE_URL=
-ACCESS_TOKEN=
-SUPABASE_ACCESS_TOKEN=
+# Runtime Environment
+# -----------------------------------------------------------------------------
+# Set to "development" for local dev, "production" for Railway/production
+NODE_ENV=development
 
-SESSION_SECRET=
-AI_INTEGRATIONS_OPENAI_API_KEY=
-OPENAI_BASE_URL=https://api.openai.com/v1
+# Port (Railway auto-sets this, but you can override)
+# Default: 5000
+PORT=5000
+
+# Logging Level (DEBUG for dev, INFO/WARN for production)
+LOG_LEVEL=DEBUG
+
+
+# =============================================================================
+# SUPABASE CONFIGURATION (Database & Authentication)
+# =============================================================================
+# Get these from: https://app.supabase.com → Your Project → Settings → API
+# Can use same project for dev and prod (recommended)
+
+# Backend Supabase Configuration
+SUPABASE_URL=https://xxxxx.supabase.co
+SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
+SUPABASE_SERVICE_ROLE_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
+
+# Database Connection String
+# Get from: Supabase Dashboard → Settings → Database → Connection string
+DATABASE_URL=postgresql://postgres:[PASSWORD]@db.xxxxx.supabase.co:5432/postgres
+
+# Frontend Supabase Configuration (Vite)
+# These are embedded in the client bundle at build time
+VITE_SUPABASE_URL=https://xxxxx.supabase.co
+VITE_SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
+
+
+# =============================================================================
+# STRIPE CONFIGURATION (Payments)
+# =============================================================================
+# ⚠️ IMPORTANT: Use TEST keys for dev, LIVE keys for production!
+# Get these from: https://dashboard.stripe.com
+# Test mode: https://dashboard.stripe.com/test/apikeys
+# Live mode: https://dashboard.stripe.com/apikeys
+
+# Stripe API Keys
+# Dev: sk_test_... / pk_test_...
+# Prod: sk_live_... / pk_live_...
+STRIPE_SECRET_KEY=sk_test_51...
+STRIPE_PUBLISHABLE_KEY=pk_test_51...
+
+# Stripe Webhook Secret
+# Create webhook endpoint: Stripe Dashboard → Developers → Webhooks
+# Dev endpoint: https://your-dev-url.railway.app/api/stripe/webhook
+# Prod endpoint: https://your-prod-url.railway.app/api/stripe/webhook
+# Each endpoint has its own secret (starts with whsec_)
+STRIPE_WEBHOOK_SECRET=whsec_...
+
+# Stripe Price IDs
+# Create products in Stripe Dashboard → Products
+# ⚠️ IMPORTANT: Create separate products for TEST and LIVE modes!
+# Dev: Use test mode price IDs (price_test_...)
+# Prod: Use live mode price IDs (price_...)
+STRIPE_PREMIUM_20_PRICE_ID=price_...      # Premium + 20 credits (€9.99)
+STRIPE_PREMIUM_80_PRICE_ID=price_...      # Premium + 80 credits (€14.99)
+STRIPE_CREDITS_40_PRICE_ID=price_...      # 40 credits (€9.99)
+STRIPE_CREDITS_80_PRICE_ID=price_...      # 80 credits (€14.99)
+
+# =============================================================================
+# OPENAI CONFIGURATION (AI Features)
+# =============================================================================
+# Used for: AI idea generation, keyword generation, competitor discovery, search
+# Get API key from: https://platform.openai.com/api-keys
+# Base URL: Use default OpenAI API or custom endpoint (e.g., for Azure OpenAI)
+
+# AI Integrations OpenAI (Primary - used throughout the app)
+AI_INTEGRATIONS_OPENAI_API_KEY=sk-...
 AI_INTEGRATIONS_OPENAI_BASE_URL=https://api.openai.com/v1
-OPENAI_API_KEY=
 
-VITE_SUPABASE_URL=
-VITE_SUPABASE_ANON_KEY=
+# OpenAI (Fallback/Alternative)
+# If AI_INTEGRATIONS_OPENAI_* are not set, these may be used as fallback
+OPENAI_API_KEY=sk-...
+OPENAI_BASE_URL=https://api.openai.com/v1
 
-STRIPE_SECRET_KEY=
-STRIPE_PUBLISHABLE_KEY=
-STRIPE_WEBHOOK_SECRET=
+# =============================================================================
+# DATAFORSEO CONFIGURATION (Keyword Metrics)
+# =============================================================================
+# Get these from: https://dataforseo.com → Account Settings
+# Can use same account for dev and prod (shared quota)
 
-STRIPE_PREMIUM_20_PRICE_ID=
-STRIPE_PREMIUM_80_PRICE_ID=
-STRIPE_CREDITS_40_PRICE_ID=
-STRIPE_CREDITS_80_PRICE_ID=
+DATA_FOR_SEO_LOGIN=your_login
+DATA_FOR_SEO_PASSWORD=your_password
 
-DATA_FOR_SEO_LOGIN=
-DATA_FOR_SEO_PASSWORD=
-DATA_FOR_SEO_CRED_B64=
+# Base64-encoded credentials (login:password)
+# Generate with: echo -n "login:password" | base64
+DATA_FOR_SEO_CRED_B64=bG9naW46cGFzc3dvcmQ=
 
-NODE_ENV=
 
-GOOGLE_SEARCH_API_KEY=
-GOOGLE_SEARCH_ENGINE_ID=
+# =============================================================================
+# GOOGLE CUSTOM SEARCH API (Optional)
+# =============================================================================
+# Optional: If not configured, falls back to LLM-only competitor discovery
+# Get API key from: https://console.cloud.google.com → APIs & Services → Credentials
+# Create search engine: https://programmablesearchengine.google.com
+# Free tier: 100 queries/day
 
-VITE_PUBLIC_POSTHOG_KEY=
-VITE_PUBLIC_POSTHOG_HOST=https://eu.i.posthog.com
+GOOGLE_SEARCH_API_KEY=your_api_key
+GOOGLE_SEARCH_ENGINE_ID=your_search_engine_id
 
-POSTHOG_API_KEY=
-POSTHOG_HOST=https://eu.i.posthog.com
 
-DEBUG_QUERIES=true
+# =============================================================================
+# POSTHOG CONFIGURATION (Analytics & Feedback)
+# =============================================================================
+# Optional: Used for user feedback collection and analytics
+# Get from: https://app.posthog.com → Project Settings
+# Can use same project for dev and prod (filter by environment in PostHog)
+
+# Backend PostHog Configuration
+POSTHOG_API_KEY=phx_your_personal_api_key_here
+POSTHOG_HOST=https://app.posthog.com
+POSTHOG_PROJECT_ID=your_project_id
+
+# Frontend PostHog Configuration (Vite)
+# These are embedded in the client bundle at build time
+VITE_PUBLIC_POSTHOG_KEY=phc_your_project_api_key_here
+VITE_PUBLIC_POSTHOG_HOST=https://app.posthog.com
+
+
+# =============================================================================
+# OPTIONAL / DEVELOPMENT ONLY
+# =============================================================================
+
+# Supabase MCP (Optional - for Cursor AI integration only)
+# Only needed if using Cursor AI with Supabase MCP server
+# Get from: Supabase Dashboard → Account Settings → Access Tokens
+SUPABASE_ACCESS_TOKEN=your_personal_access_token
+
+
+# =============================================================================
+# NOTES
+# =============================================================================
+# 
+# DEV vs PROD Differences:
+# -----------------------
+# ✅ MUST BE DIFFERENT:
+#    - NODE_ENV (development vs production)
+#    - All STRIPE_* variables (test vs live mode)
+#    - LOG_LEVEL (DEBUG vs INFO)
+#
+# ✅ CAN BE SAME:
+#    - SUPABASE_* (recommended: same project)
+#    - DATABASE_URL (same Supabase project)
+#    - OPENAI_* (can use same API key, or separate for quota management)
+#    - DATA_FOR_SEO_* (shared account)
+#    - GOOGLE_SEARCH_* (shared quota)
+#    - POSTHOG_* (same project)
+#
+# Security:
+# ---------
+# - Never commit .env to git
+# - Server-side only: SUPABASE_SERVICE_ROLE_KEY, STRIPE_SECRET_KEY, 
+#   STRIPE_WEBHOOK_SECRET, DATA_FOR_SEO_*, GOOGLE_SEARCH_API_KEY,
+#   OPENAI_API_KEY, AI_INTEGRATIONS_OPENAI_API_KEY
+# - Client-side safe: SUPABASE_ANON_KEY, VITE_* variables
+#
+# Railway Deployment:
+# -------------------
+# 1. Set all variables in Railway Dashboard → Variables tab
+# 2. Use Railway's "Raw Editor" for bulk import
+# 3. Make sure NODE_ENV=production for production deployments
+# 4. Use live Stripe keys and price IDs for production
+# 5. OpenAI API keys can be the same for dev/prod (or separate for quota management)
