ENHANCE: add support for minimal version of sectors_aggregated_metrics.json, implement upload endpoint for data files, and improve monthly data handling in KeywordVectorService for better compatibility and error management.

--- a/.gitignore
+++ b/.gitignore
@@ -129,6 +129,8 @@ vite.config.ts.*
 *.rar
 *.7z
 data/sectors_aggregated_metrics.json
+# Allow minimal version to be committed
+!data/sectors_aggregated_metrics.minimal.json
 
 new_keywords
 log.txt
